gcc/testsuite/gdc.test/runnable/testmain.d

// REQUIRED_ARGS: -main

void foo() { }

